fixed bug with menu on small landscape screens

--- a/styles/_header.css
+++ b/styles/_header.css
@@ -177,6 +177,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    padding-top: 150px !important;
     overflow: auto;
     background-color: var(--text-primary-color);
     flex-direction: column;
